--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs: #定义工作流程
         uses: actions/upload-artifact@v3 #使用 GitHub Actions 提供的 upload-artifact 动作
         with:
           name: firmware #设置 artifact 名称为 firmware
-          path: LOSTHU*.bin #上传文件路径为 LOSTHU*.bin
+          path: LOSEHU*.bin #上传文件路径为 LOSEHU*.bin
 
       - name: Upload binaries to release #将二进制文件上传到 release
         if: ${{ startsWith(github.ref, 'refs/tags/v') }} #设置条件，当 ref 以 'refs/tags/v' 开头时执行
@@ -42,7 +42,7 @@ jobs: #定义工作流程
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }} #GitHub token
           file: firmware.packed.bin #要上传的文件
-          asset_name: LOSTHU_$tag.bin #上传的文件名
+          asset_name: LoseHu_$tag.bin #上传的文件名
           tag: ${{ github.ref }}  #GitHub ref
           overwrite: true  #覆盖已有的文件
           release_name: release ${{ github.ref_name }} #发布名称为 release + ref 名称
